// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Card > Snapshots > matches default snapshot 1`] = `
<div
  class="card card--default"
  data-testid="card"
>
  Test content
</div>
`;

exports[`Card > Snapshots > matches disabled state snapshot 1`] = `
<div
  class="card card--default card--disabled"
  data-testid="card"
>
  Test content
</div>
`;

exports[`Card > Snapshots > matches loading state snapshot 1`] = `
<div
  class="card card--default card--loading"
  data-testid="card"
>
  <div
    class="card__loading-overlay"
  >
    <div
      class="card__loading-spinner"
    />
  </div>
  Test content
</div>
`;
